Adding missing fix for #203 - full recalc processors now respect lower Rollup Control batch size limits, too

--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -25,7 +25,7 @@ private class RollupFullRecalcTests {
     );
     List<RollupAsyncProcessor> processors = new List<RollupAsyncProcessor>{
       actualProcessor,
-      new RollupDeferredFullRecalcProcessor(null, null, null, null, null),
+      new RollupDeferredFullRecalcProcessor(new List<Rollup__mdt>(), null, null, null, null),
       actualProcessor
     };
     processors.sort();
